# inkystock

./: .gitignore  Makefile  README.md  config.ini  dev-requirements.txt  main.py  requirements.txt  run.sh  setup.cfg  ui.py
.github/workflows/: codeql-analysis.yml
inkystock/: __init__.py  chart.py  config.py  db.py  layout.py  paint.py
inkystock/stocks/: base.py  coingecko.py  iex.py  mock.py
resources/: cron-inkystock-5m
resources/examples/: hello_world.ini  hello_world.py  vaccines.ini  vaccines.py  vaccines_ui.py
