[metadata]
# replace with your username:
name = inkystock
version = 0.0.1
author = Ross Duggan
author_email = ross@duggan.ie
description = A monochrome mini-display for stocks or cryptocurrency
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/duggan/inkystock
project_urls =
    Bug Tracker = https://github.com/duggan/inkystock/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
